--- a/office-sys/pom.xml
+++ b/office-sys/pom.xml
@@ -88,6 +88,11 @@
             <artifactId>lombok</artifactId>
             <optional> true </optional>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
