--- a/rest-app/pom.xml
+++ b/rest-app/pom.xml
@@ -22,6 +22,13 @@
             <artifactId>anr-web-starter</artifactId>
             <version>${parent.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.chuang.tf</groupId>
+            <artifactId>template-fetch</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
+
     </dependencies>
 
 </project>
